--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ box-sizing: border-box;
 
 .App {
   text-align: center;
-  background-color: rgb(24, 24, 27);
+  background-color: #0F0E17;
   /* color: white; */
   font-weight: 600;
 }
