--- a/src/components/IntroSection/intro.css
+++ b/src/components/IntroSection/intro.css
@@ -12,7 +12,7 @@
   justify-content: space-evenly;
   align-items: center; 
   margin-bottom: 50px;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 #intro-div>div:nth-child(1){
   margin-top: 2rem;
@@ -62,13 +62,32 @@
   #intro-div{
     display: flex;
     flex-direction: column;
-    height: 50rem;
+    height: auto; 
+   }
+  #intro-div>div:nth-child(2)>p{
+    text-align: justify;
   }
 }
+
   @media (max-width:790px) {
   #intro-div{
     display: flex;
     flex-direction: column;
-    height: 60rem;
+    height: auto; 
+   }
+  #intro-div>div:nth-child(2)>p{
+    text-align: justify;
+  }
+}
+
+@media (max-width:600px) {    
+  #intro-div{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+  #intro-div>div:nth-child(2)>p{
+    text-align: left;
+    font-size: 1.2rem;
   }
 }
