--- a/src/components/IntroSection/intro.css
+++ b/src/components/IntroSection/intro.css
@@ -1,8 +1,7 @@
-
-#intro-div a{
+#intro-div a {
   color: white;
 }
-#intro-div{
+#intro-div {
   display: flex;
 
   /* border: 1px solid white; */
@@ -11,83 +10,81 @@
   width: 80%;
   height: 30rem;
   justify-content: space-evenly;
-  align-items: center; 
+  align-items: center;
   margin-bottom: 50px;
   font-size: 1.3rem;
 }
-#intro-div>div:nth-child(1){
+#intro-div > div:nth-child(1) {
   margin-top: 2rem;
   width: 20rem;
   height: 20rem;
 }
-#intro-div>div:nth-child(1) img{
-  width: 100%;
+#intro-div > div:nth-child(1) img {
+  width: 99%;
   height: 100%;
   border-radius: 10%;
 }
-#intro-div>div:nth-child(2){
+#intro-div > div:nth-child(2) {
   color: white;
   width: 60%;
   padding: 2%;
-  
 }
-#intro-div>div:nth-child(2)>p{
+#intro-div > div:nth-child(2) > p {
   text-align: justify;
 }
-#intro-div>div:nth-child(2) h1{
+#intro-div > div:nth-child(2) h1 {
   margin: 1rem 0;
-  color: #FF8906;
+  color: #ff8906;
 }
-#intro-div>div:nth-child(2)>div.resume{
+#intro-div > div:nth-child(2) > div.resume {
   width: 10rem;
   height: 4rem;
-  border: 1px solid #FF8906;
+  border: 1px solid #ff8906;
   margin: auto;
   margin-top: 1.5rem;
-  padding: 2.5%;  
+  padding: 2.5%;
+  border-radius: 5%;
 }
-#intro-div>div:nth-child(2)>div.socials a{
+#intro-div > div:nth-child(2) > div.socials a {
   /* border: 1px solid red;   */
-  margin: .5rem ;
+  margin: 0.5rem;
 }
 
-#intro-div>div:nth-child(2)>div.resume:hover{
+#intro-div > div:nth-child(2) > div.resume:hover {
   /* border: 3px solid white; */
-  background-color: #FF8906;
-  transition: .5s;  
+  background-color: #ff8906;
+  transition: 0.5s;
 }
 
-
-@media (max-width:1024px) and (min-width:790px) {
-
-  #intro-div{
-    display: flex;
-    flex-direction: column;
-    height: auto; 
-   }
-  #intro-div>div:nth-child(2)>p{
-    text-align: justify;
-  }
-}
-
-  @media (max-width:790px) {
-  #intro-div{
-    display: flex;
-    flex-direction: column;
-    height: auto; 
-   }
-  #intro-div>div:nth-child(2)>p{
-    text-align: justify;
-  }
-}
-
-@media (max-width:600px) {    
-  #intro-div{
+@media (max-width: 1024px) and (min-width: 790px) {
+  #intro-div {
     display: flex;
     flex-direction: column;
     height: auto;
   }
-  #intro-div>div:nth-child(2)>p{
+  #intro-div > div:nth-child(2) > p {
+    text-align: justify;
+  }
+}
+
+@media (max-width: 790px) {
+  #intro-div {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+  #intro-div > div:nth-child(2) > p {
+    text-align: justify;
+  }
+}
+
+@media (max-width: 600px) {
+  #intro-div {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+  #intro-div > div:nth-child(2) > p {
     text-align: left;
     font-size: 1.2rem;
   }
