--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,107 +1,143 @@
-*{
+* {
   box-sizing: border-box;
 }
-h2{ 
+h2 {
   width: 400px;
   padding: 10px;
   margin: 1.5rem auto;
   color: white;
   font-size: 2rem;
 }
-.projects-container{
-height:50rem;
-/* border: 1px solid red; */
+.projects-container {
+  height: 50rem;
+  /* border: 1px solid red; */
 }
-#projectsDiv{
-  color: white;    
+#projectsDiv {
+  color: white;
   display: flex;
   margin: auto;
-  width: 80%;
+  width: 95%;
   height: 45rem;
   justify-content: space-evenly;
-  align-items: center;   
+  align-items: center;
 }
-#projectsDiv>div{
-  border: 1px solid white;
-  background-color: white;
-  color:black;  
-  width:40%;
-  height: 80%;
-  padding: .5%;
-  padding-bottom: 20px; 
-}
-#projectsDiv>div .proj-title{
-  margin: .3rem;  
-  color: rgb(255, 137, 6);
-}
-
-#projectsDiv>div>p,#projectsDiv>div>div{
-  margin-top: 3%;
-  min-height:9%;
-}
-#projectsDiv>div>img{
-  width: 100%;
-  height: 55%;
-}
-#projectsDiv>div .button{
-  height: 2rem;
-  width: 4rem;
-  margin: 5%;
+#projectsDiv .features {
   display: inline-block;
-  /* padding-top: 2.5%; */
-  
+  background-color: rgb(255, 137, 6);
+  color: white;
+  padding: 0.3rem 0.6rem;
+  border-radius: 5%;
+  margin: 0rem 0.3rem;
+  font-size: 0.85rem;
 }
-#projectsDiv>div .button a{
-  border: 2px solid rgb(255, 137, 6); 
-  padding: .2rem;
-  color: rgb(255, 137, 6);
-}
-.projecttags{
+#projectsDiv .featureBox {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
-
-.projecttags>div{
-  /* border: 1px solid red;  */
-  color:rgb(255, 137, 6);
+#projectsDiv td:nth-child(2) {
+  padding: 0.3rem;
+}
+#projectsDiv > div {
+  border: 1px solid white;
+  background-color: white;
+  color: black;
+  width: 46%;
+  height: 100%;
+  border-radius: 2%;
+  padding: 0.5%;
+  padding-bottom: 2rem;
+  /* box-shadow: rgba(248, 244, 244, 0.993) 0px 5px 15px; */
+  box-shadow: rgb(255, 254, 254) 0px 2px 8px;
+}
+#projectsDiv > div .proj-title {
+  margin: 0.6rem;
+  font-size: 1.3rem;
+  color: white;
+  padding: 0.5rem 0;
+  border-radius: 2%;
+  background-color: rgb(255, 137, 6);
 }
 
-
-@media (max-width:1024px) and (min-width:790px) {
-  #projectsDiv{
-    flex-direction: column;
-    height:auto;
-    margin: 12rem auto;
+#projectsDiv > div > p,
+#projectsDiv > div > div {
+  margin-top: 3%;
+  min-height: 9%;
 }
-#projectsDiv>div{
+#projectsDiv > div > img {
+  width: 100%;
+  height: 55%;
+  border-radius: 2%;
+}
+#projectsDiv .desc {
+  font-size: 0.92rem;
+  margin-top: 1rem;
+}
+#projectsDiv > div .button {
+  height: 0.3rem;
+  width: 5rem;
+  margin: 0.7rem 0;
+  margin-right: 1rem;
+  display: inline-block;
+  padding-top: 3%;
+  border: 2px solid rgb(255, 137, 6);
+  transition: 0.5s;
+  border-radius: 10%;
+}
+#projectsDiv > div .button a {
+  padding: 0.2rem;
+  color: rgb(255, 137, 6);
+}
+#projectsDiv > div .button:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.projecttags {
+  display: flex;
+  justify-content: space-evenly;
   width: 80%;
-  margin: 2rem 0rem;
-  height:auto;
-}
-h2{
-  margin-top: -1rem;
-}
-.projects-container{
-  height:auto;
-}
+  margin: auto;
+  align-items: center;
 }
 
-  @media (max-width:790px) {
-  #projectsDiv{
+.projecttags > div {
+  /* width: 10%; */
+  color: rgb(255, 137, 6);
+}
+
+@media (max-width: 1024px) and (min-width: 790px) {
+  #projectsDiv {
     flex-direction: column;
-    height:auto;
+    height: auto;
+    margin: 12rem auto;
+  }
+  #projectsDiv > div {
+    width: 80%;
+    margin: 2rem 0rem;
+    height: auto;
+  }
+  h2 {
+    margin-top: -1rem;
+  }
+  .projects-container {
+    height: auto;
+  }
+}
+
+@media (max-width: 790px) {
+  #projectsDiv {
+    flex-direction: column;
+    height: auto;
     margin: 6rem auto;
   }
-  #projectsDiv>div{
+  #projectsDiv > div {
     width: 105%;
-    height:auto;
+    height: auto;
     margin: 2rem 0rem;
-}
-h2{
-  margin-top: -1rem;
-}
-.projects-container{
-  height:auto;
-}
+  }
+  h2 {
+    margin-top: -1rem;
+  }
+  .projects-container {
+    height: auto;
+  }
 }
