--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -12,16 +12,16 @@ h2 {
   height: 50rem;
   /* border: 1px solid red; */
 }
-.projects-container>h2 {
-margin-bottom: 2rem;
-margin-top: -2.2rem;
+.projects-container > h2 {
+  margin-bottom: 2rem;
+  margin-top: -2.2rem;
 }
 #projectsDiv {
   color: white;
   display: flex;
   margin: auto;
   width: 100%;
-  height: 45rem;
+  height: 43rem;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -32,8 +32,8 @@ margin-top: -2.2rem;
   color: white;
   padding: 0.3rem 0.6rem;
   border-radius: 5%;
-  margin: 0rem 0.3rem;
-  font-size: 0.85rem;
+  /* margin: 0rem 0.3rem; */
+  font-size: 0.75rem;
 }
 #projectsDiv .featureBox {
   display: flex;
@@ -52,7 +52,7 @@ margin-top: -2.2rem;
   height: 95%;
   border-radius: 2%;
   padding: 0.5%;
-  padding-bottom: 2rem;
+  padding-bottom: 2.5rem;
   /* box-shadow: rgba(248, 244, 244, 0.993) 0px 5px 15px; */
   box-shadow: rgb(255, 254, 254) 0px 2px 8px;
 }
@@ -90,10 +90,10 @@ margin-top: -2.2rem;
   padding: 1.3rem 0;
 } */
 .buttonContainer {
-  /* border: 1px solid red; */
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  /* margin-bottom: 10rem; */
 }
 #projectsDiv > div .button a {
   padding: 0.2rem;
@@ -103,8 +103,9 @@ margin-top: -2.2rem;
 #projectsDiv > div .button:hover {
   /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
   text-decoration: underline;
-  text-underline-offset: 0.5rem;
-  text-decoration-thickness: 2px;
+  text-decoration-style: dashed;
+  text-underline-offset: .5rem;
+  text-decoration-thickness: 2.5px;
 }
 .projecttags {
   display: flex;
@@ -120,7 +121,7 @@ margin-top: -2.2rem;
   color: #059dc0;
 }
 
-@media (max-width: 1400px) and (min-width: 870px) {
+@media (max-width: 1200px) and (min-width: 870px) {
   #projectsDiv {
     flex-direction: column;
     height: auto;
